correct shifts on post

--- a/_sass/elements-extra.scss
+++ b/_sass/elements-extra.scss
@@ -413,16 +413,14 @@ figure#right {
   overflow: visible;
 
   position: relative;
-  left: 30px;
+  right: 30px;
   width: 100%;
   height: 0;
-  margin: 3em;
-  margin-left: 0em;
   padding-bottom: 70%;
 
   @media screen and #{$half-screen}
   {
-    left: 0;
+    right: 0;
     overflow: hidden;
   }
 }
@@ -485,6 +483,12 @@ figure#right {
 //   text-align: center;
 //   padding: 3px 0;
 // }
+.side-gallery {
+  position: relative;
+  left: 30px;
+  width: 100%;
+  margin-left: 0em;
+}
 
 .cards {
   margin-top: 25px;
